@@ -1,7 +1,7 @@
 Package: mlt
 Title: Most Likely Transformations
-Version: 1.0-7
-Date: 2019-10-07
+Version: 1.1-0
+Date: 2019-10-09
 Authors@R: person("Torsten", "Hothorn", role = c("aut", "cre"),
                   email = "Torsten.Hothorn@R-project.org", comment = c(ORCID = "0000-0001-8301-0471"))  
 Description: Likelihood-based estimation of conditional transformation
@@ -9,7 +9,7 @@ Description: Likelihood-based estimation of conditional transformation
   Hothorn et al. (2018) <DOI:10.1111/sjos.12291>.
 Depends: basefun (>= 1.0-5), variables (>= 1.0-2)
 Imports: BB, alabama, stats, coneproj, graphics, methods, grDevices, sandwich,
-  numDeriv, survival
+  numDeriv, survival, nloptr
 Suggests: MASS, nnet, TH.data, multcomp
 URL: http://ctm.R-forge.R-project.org
 License: GPL-2
