@@ -4,6 +4,7 @@ import("variables")
 import("numDeriv") ### needed by BB???
 importFrom("BB", "spg", "BBoptim")
 importFrom("alabama", "auglag")
+importFrom("nloptr", "nloptr")
 importFrom("sandwich", "estfun", "bread")
 importFrom("stats", "simulate", "variable.names", "model.matrix", "logLik",
            "vcov", "AIC", "coef", "confint", "dlogis", "dnorm",
